Set up package.json and accidentally beautified a few things

--- a/app/app.html
+++ b/app/app.html
@@ -1,27 +1,32 @@
 <!doctype html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <title>Electron Boilerplate</title>
 
-    <link href="stylesheets/main.css" rel="stylesheet" type="text/css">
+	<head>
+		<meta charset="utf-8">
+		<title>Electron Boilerplate</title>
 
-    <script src="helpers/context_menu.js"></script>
-    <script src="helpers/external_links.js"></script>
+		<link href="stylesheets/main.css" rel="stylesheet" type="text/css">
 
-    <script src="app.js"></script>
-</head>
-<body>
+		<script src="helpers/context_menu.js"></script>
+		<script src="helpers/external_links.js"></script>
 
-    <div class="container">
-        <h1 id="greet"></h1>
-        <p class="subtitle">
-            Welcome to <a href="http://electron.atom.io" class="js-external-link">Electron</a> app running on this magnificent <strong id="platform-info"></strong> machine.
-        </p>
-        <p class="subtitle">
-            You are in <strong id="env-name"></strong> environment.
-        </p>
-    </div>
 
-</body>
+		<script src="app.js"></script>
+	</head>
+
+	<body>
+
+		<div class="container">
+			<h1 id="greet"></h1>
+			<p class="subtitle">
+				Welcome to <a href="http://electron.atom.io" class="js-external-link">Electron</a> app running on this magnificent <strong id="platform-info"></strong> machine.
+			</p>
+			<p class="subtitle">
+				You are in <strong id="env-name"></strong> environment.
+			</p>
+		</div>
+
+		<script src="vendor/webcam.min.js"></script>
+	</body>
+
 </html>
