--- a/app/app.html
+++ b/app/app.html
@@ -10,23 +10,15 @@
 		<script src="helpers/context_menu.js"></script>
 		<script src="helpers/external_links.js"></script>
 
-
+		<script src="vendor/jquery-3.1.1.min.js"></script>
 		<script src="app.js"></script>
 	</head>
 
 	<body>
 
 		<div class="container">
-			<h1 id="greet"></h1>
-			<p class="subtitle">
-				Welcome to <a href="http://electron.atom.io" class="js-external-link">Electron</a> app running on this magnificent <strong id="platform-info"></strong> machine.
-			</p>
-			<p class="subtitle">
-				You are in <strong id="env-name"></strong> environment.
-			</p>
+			<div id='webcam'></div>
 		</div>
-
-		<script src="vendor/webcam.min.js"></script>
 	</body>
 
 </html>
