--- a/app/app.html
+++ b/app/app.html
@@ -9,16 +9,26 @@
 
 		<script src="helpers/context_menu.js"></script>
 		<script src="helpers/external_links.js"></script>
-
-		<script src="vendor/jquery-3.1.1.min.js"></script>
-		<script src="app.js"></script>
 	</head>
 
 	<body>
 
 		<div class="container">
 			<div id='webcam'></div>
+			<button id="snapButton">Snap</button>
 		</div>
+
+		<script>
+			if (typeof module === 'object') {
+				window.module = module;
+				module = undefined;
+			}
+		</script>
+		<script src="vendor/jquery-3.1.1.min.js"></script>
+		<script src="app.js"></script>
+		<script>
+			if (window.module) module = window.module;
+		</script>
 	</body>
 
 </html>
