--- a/app/app.html
+++ b/app/app.html
@@ -7,7 +7,7 @@
 
 		<link href="stylesheets/main.css" rel="stylesheet" type="text/css">
 
-		<script src="helpers/context_menu.js"></script>
+		<!--<script src="helpers/context_menu.js"></script>-->
 		<script src="helpers/external_links.js"></script>
 	</head>
 
